--- a/public/docs.html
+++ b/public/docs.html
@@ -48,11 +48,11 @@
           <a class="nav-link" href="index.html">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="about.html">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="docs.html">Documentation</a>
+          <a class="nav-link active" href="docs.html">Documentation</a>
         </li>
       </ul>
 
