--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,16 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-12">
+        <h2 class="header">List</h2>
+        <div class="card">
+          <div class="card-body">
+            <p id="listing"></p>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
   <div class="album py-5">
