--- a/public/about.html
+++ b/public/about.html
@@ -126,7 +126,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="jake.jpg" alt="Avatar">
+                                  <img src="Gyan.jpeg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
