--- a/public/about.html
+++ b/public/about.html
@@ -58,9 +58,13 @@
               <p>Food safety is a top priority for any community wishing to keep its residents safe and healthy.
                 According to the <a href="https://www.who.int/" target="_blank">World Health Organization</a>,
                 600 million people become ill from contaminated food, and ~420,000 people die every year<sup><a
-                href="https://www.who.int/news-room/fact-sheets/detail/food-safety" target="_blank">1</a></sup>.</p>
-                <p><strong>Currently, there is no easily accessible and intuitive way to determine if the places they go to are
-                compliant with food inspections.</strong></p>
+                href="https://www.who.int/news-room/fact-sheets/detail/food-safety" target="_blank">1</a></sup>.
+                This web application is targeted to those who lack easy access to tools to allow them to make well-informed healthy eating decisions.
+                Prince George’s county has the 3rd highest number of households in Maryland yet 12th in Median Household Income<sup><a
+                href="https://en.wikipedia.org/wiki/List_of_Maryland_locations_by_per_capita_income" target="_blank">2</a></sup>.
+                While other counties may have more money, the residents of Prince George’s county lack the same resources. We believe everyone deserves
+              to know what exactly is going into their body, and if that's going to be safe. This is why we've create PGCFI. </p>
+                <p><strong>Currently, there is no easily accessible and intuitive way to determine compliant restaurants and eateries.</strong></p>
                 <p>We hope to solve this problem with this web application.</p>
                 <br>
                 <div class="team">
