--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,9 @@
           <!--Card Label-->
           <h3 class="results">Inspections</h3>
           <div class="card mb-4 shadow-sm">
+              <span id="inspection_results">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+              </span>
           </div>
         </div>
       </div>
