--- a/public/index.html
+++ b/public/index.html
@@ -186,15 +186,19 @@
           <!--Card Label-->
           <h3 class="results">Address</h3>
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-          </div>
+              <span id="address">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+                    </span>
+            </div>
         </div>
         <div class="col-md-4">
           <!--Card Label-->
           <h3 class="results">Cleanliness</h3>
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-          </div>
+              <span id="cleanliness">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+                    </span>          
+            </div>
         </div>
         <div class="col-md-4">
           <!--Card Label-->
