--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="section-head">Get Started</h2>
+        <h2 class="section-head">Get Started!</h2>
         <p>Get started by filtering the type of category you want to see. The map will then update and you can select
           the restaurant you want to see health inspection results from. </p>
       </div>
