--- a/src/index.html
+++ b/src/index.html
@@ -183,18 +183,37 @@
 
                 <div class="col-sm-3">
                   <h3 class="results">Name</h3>
-                  <p id="name"></p>
+                  <p class="results-name" id="name"></p>
                 </div>
 
                 <div class="col-sm-3">
                   <h3 class="results">Location</h3>
-                  <p id="address"></p>
+                  <p class="results-addy"id="address"></p>
 
                 </div>
 
                 <div class="col-sm-6">
                   <h3 class="results">Inspection Results</h3>
-                  <p id="inspection_results"></p>
+                  <p class="results-inspection" id="inspection_results"></p>
+                </div>
+
+
+
+                <div class="col-sm-12">
+                  <hr class="my-3">
+                  <p>
+
+                    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                      See detailed inspection results
+                    </button>
+                  </p>
+                  <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                      <ul>
+                        <p id="detailed-results">No resturant or establishment selcted</p>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
 
               </div>
