--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,8 @@
                     <hr class="my-3">
                     <p>
 
-                      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                      <button id="inspection-button" class="btn btn-primary" type="button" data-toggle="collapse"
+                        data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         See detailed inspection results
                       </button>
                     </p>
