--- a/src/docs.html
+++ b/src/docs.html
@@ -27,7 +27,7 @@
 
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <div id="banner-text">
-      <img src="pg-logo.png" width="25%">
+      <img src="\static\pg-logo.png" width="25%">
     </div>
   </div>
 
